<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Training" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:padding="36sp"
        android:textSize="36sp" />
    
    <Button
        android:id="@+id/btt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:background="@drawable/drawable"
        android:padding="15sp" 
        android:layout_marginTop="30dp"
        android:textSize="36sp" />
    
    <Button
        android:id="@+id/btt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:background="@drawable/drawable"
        android:padding="15sp"
        android:layout_marginTop="30dp"
        android:textSize="36sp" />

</LinearLayout>